<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EmailActivity">

        <ImageView
            android:id="@+id/ivBackPressedId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTopNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/what_s_your_email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@+id/tvTopNameId"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/your_email_address"
                    android:textColor="@color/gray"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:hint="(Enter here)"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textSize="17sp" />
            </LinearLayout>


            <Button
                android:id="@+id/saveEmailButtonId"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/black"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</layout>
