<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageViewId"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:civ_border_color="@color/text_color"
                app:civ_border_width="2dp" />

            <ImageView
                android:id="@+id/ivGetProfileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/circle_background"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/text_color" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:focusable="false"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNoId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:focusable="false"
                android:hint="@string/phone"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:focusable="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="17sp"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptionId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/gray"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
                android:focusable="false"
                android:hint="Tell us about yourself"
                android:inputType="textMultiLine|textLongMessage"
                android:maxLength="150"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="17sp"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</layout>
